--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-16  Åsmund Skjæveland  <aasmunds@fys.uio.no>
+
+	* nn.po: Updated Norwegian Nynorsk translation.
+
 2004-03-16 Sayamindu Dasgupta <sayamindu@clai.net>
 
 	* bn.po: Updated Bengali translation
