--- a/po/nn.po
+++ b/po/nn.po
@@ -7,15 +7,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: nn\n"
-"POT-Creation-Date: 2004-03-09 03:31-0600\n"
-"PO-Revision-Date: 2004-02-24 09:27+0100\n"
-"Last-Translator: Åsmund Skjæveland <aasmunds@fys.uio.no>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-16 19:30+0100\n"
+"PO-Revision-Date: 2004-03-16 19:42+0100\n"
+"Last-Translator: Åsmund Skjæveland\n"
 "Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: KBabel 1.3.1\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -396,19 +397,19 @@ msgstr "Hjelplesar for GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr "&#8216;"
+msgstr "‘"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr "&#8217;"
+msgstr "’"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr "&#8220;"
+msgstr "«"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr "&#8221;"
+msgstr "»"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
@@ -460,7 +461,7 @@ msgstr "Om dette settet"
 
 #: stylesheets/l10n.xml.in.h:17
 msgid "Affiliation"
-msgstr ""
+msgstr "Tilknytt"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
@@ -666,65 +667,3 @@ msgstr "Få hjelp om GNOME"
 msgid "Help"
 msgstr "Hjelp"
 
-#~ msgid "Could not obtain a GtkStyle."
-#~ msgstr "Fekk ikkje tak i ein GtkStyle."
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Dokumentet «%s» finst ikkje"
-
-#, fuzzy
-#~ msgid "_Search for:"
-#~ msgstr "Søk etter:"
-
-#, fuzzy
-#~ msgid "Additional documents"
-#~ msgstr "Installerte dokument"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Manualsider"
-
-#, fuzzy
-#~ msgid "Info Pages"
-#~ msgstr "Info-sider"
-
-#~ msgid "Manual pages"
-#~ msgstr "Manualsider"
-
-#~ msgid "Search in the index"
-#~ msgstr "Søk i indeksen"
-
-#~ msgid "info"
-#~ msgstr "info"
-
-#~ msgid "man"
-#~ msgstr "man"
-
-#~ msgid "Start page"
-#~ msgstr "Startside"
-
-#~ msgid "Scrollkeeper docs for category"
-#~ msgstr "Scrollkeeper-dokument for kategori"
-
-#~ msgid "/File/_Quit"
-#~ msgstr "/File/_Avslutt"
-
-#~ msgid "Manual pages for section"
-#~ msgstr "Manualsider for avsnitt"
-
-#~ msgid "Man page sections"
-#~ msgstr "Man-sider avsnitt"
-
-#~ msgid "Go back in the history list"
-#~ msgstr "Gå tilbake i historikklista"
-
-#~ msgid "Go forth in the history list"
-#~ msgstr "Gå framover i historikklista"
-
-#~ msgid "Overview of contents"
-#~ msgstr "Oversyn og innhald"
-
-#~ msgid "Search for a phrase in the document"
-#~ msgstr "Søk etter frase i dokumentet"
-
-#~ msgid "Enter phrase to search for in all documents"
-#~ msgstr "Tast in frase som det skal leitast etter i alle dokument"
