--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-31  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian tranlsation by
+	Vladimir "Kaladan" Petkov <vpetkov@i-space.org>.
+	
 2004-03-31  Christian Rose  <menthos@menthos.com>
 
 	* af.po: Added Afrikaans translation by
