--- a/po/bg.po
+++ b/po/bg.po
@@ -2,115 +2,103 @@
 # Copyright (C) 2002 Free Software Foundation, Inc.
 # Alexander Shopov <al_shopov@web.bg>, 2002.
 # small update for completeness, Yanko Kaneti <yaneti@declera.com>, 2002.
-#
+# small update, Vladimir "Kaladan" Petkov <vpetkov@i-space.org>, 2004
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-03-22 17:51-0600\n"
-"PO-Revision-Date: 2002-12-22 21:51+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-23 04:21+0100\n"
+"PO-Revision-Date: 2004-03-27 11:03+0200\n"
 "Last-Translator: Alexander Shopov <al_shopov@yahoo.com>\n"
 "Language-Team: Bulgarian <dict@linux.zonebg.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 0.9.6\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Приложения"
+msgstr "Аплети"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
-msgstr "Приложения"
+msgstr "Програми"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Десктоп"
+msgstr "Десктоп"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Разработка"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Разработка"
+msgstr "Обкръжения за Разработка"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Разработка"
+msgstr "Инструменти за Разработка"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/_Редактирай"
+msgstr "Редактори"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Приложения"
+msgstr "Образователни програми"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Игри и Забавление"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Основен"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "Съдържание"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Приложения"
+msgstr "Интернет Програми"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Функции на ядрото"
+msgstr "Ядра"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Приложения"
+msgstr "Мултимедийни Програми"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Офис Програми"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Приложения"
+msgstr "Научни програми"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Сигурност"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Системни извиквания"
+msgstr "Система"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Полезни"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Приложения"
+msgstr "Графични програми"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -118,15 +106,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Чувствителност към малки или големи букви"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Търсене"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Търсене: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -150,54 +138,49 @@ msgstr "Фабрика на Йелп"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Не е намерен href атрибут в този документ на Йелп"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Няма достатъчно памет"
 
 #: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Заглавна страница"
 
 #: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
-#, fuzzy
 msgid "Contents"
 msgstr "Съдържание"
 
 #: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Неизвестен"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Документът '%s' не съществува"
+msgstr "Избрания докомент не може да бъде отворен"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Документът '%s' не съществува"
+msgstr "Избраната страница не може да бъде намерена в този документ."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "Документът '%s' не съществува"
+msgstr "Таблицата със съдържанието не може да бъде прочетена."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Документи от типа DocBook·SGML вече не се поддържат."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Документът '%s' не съществува"
+msgstr "Избраният файл не може да бъде прочетен."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr ""
+msgstr "Определя коя кеш директория да е в употреба"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -270,9 +253,8 @@ msgid "System Administration"
 msgstr "Системна администрация"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Документи"
+msgstr "Документ URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
@@ -283,9 +265,9 @@ msgid "YelpTocPager: Pause count is negative."
 msgstr ""
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Не можах да активирам Йелп: '%s'"
+msgstr "OMF·файлът·'%s' не може да бъде зареден."
 
 #: src/yelp-toc-pager.c:883
 msgid "Categories"
@@ -305,62 +287,55 @@ msgstr "/Файл/_Нов прозорец"
 
 #: src/yelp-window.c:253
 msgid "/File/_Close window"
-msgstr "/Файл/Затвори прозоре_ц"
+msgstr "/Файл/Затворя прозоре_ц"
 
 #: src/yelp-window.c:257
 msgid "/_Edit"
-msgstr "/_Редактирай"
+msgstr "/_Редактира"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Редактирай/_Намери в страницата..."
+msgstr "/Редактира/_Намира в страницата..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Редактирай/Намери _отново"
+msgstr "/Редактира/Намира _отново"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Редактирай/Намери _отново"
+msgstr "/Редактира/Намера _отново"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
-msgstr "/_Иди"
+msgstr "/_Отива"
 
 #: src/yelp-window.c:269
 msgid "/Go/_Back"
-msgstr "/Иди/_Назад"
+msgstr "/Отива/_Назад"
 
 #: src/yelp-window.c:272
 msgid "/Go/_Forward"
-msgstr "/Иди/Н_апред"
+msgstr "/Отива/Н_апред"
 
 #: src/yelp-window.c:275
 msgid "/Go/_Home"
-msgstr "/Иди/_В началото"
+msgstr "/Отива/_В началото"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Иди"
+msgstr "/_Отива"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_Предишна"
+msgstr "/Отива/_Предишна Страница"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Иди/_Индекс"
+msgstr "/Отива/_Следваща Страница"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Съдържание"
+msgstr "/Отива/_Съдържание"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -368,7 +343,7 @@ msgstr "/_Помощ"
 
 #: src/yelp-window.c:290
 msgid "/Help/_About"
-msgstr "/Помощ/Информ_ация"
+msgstr "/Помощ/_Относно програмата"
 
 #: src/yelp-window.c:352
 msgid "Help Browser"
@@ -384,7 +359,7 @@ msgstr "Назад"
 
 #: src/yelp-window.c:626
 msgid "Show previous page in history"
-msgstr "Покажи предната страница в историята"
+msgstr "Показва предипната страница в историята"
 
 #: src/yelp-window.c:636
 msgid "Forward"
@@ -392,189 +367,187 @@ msgstr "Напред"
 
 #: src/yelp-window.c:637
 msgid "Show next page in history"
-msgstr "Покажи следващата страница в историята"
+msgstr "Показва следващата страница в историята"
 
 #: src/yelp-window.c:649
 msgid "Home"
-msgstr "Вкъщи"
+msgstr "Домашна"
 
 #: src/yelp-window.c:650
 msgid "Go to home view"
-msgstr "Иди в началото"
+msgstr "Отива в началото"
 
 #: src/yelp-window.c:860
 msgid "Loading..."
-msgstr "Зареждам..."
+msgstr "Зареждане..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1300
 msgid "translator_credits"
-msgstr "Александър Шопов"
+msgstr "Александър Шопов/n"
+"Владимир Петков/n"
+"<vpetkov@i-space.org>"
 
 #: src/yelp-window.c:1306
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "Навигаторът на помощта за ГНОМ 2.0"
+msgstr "Навигатор на помощта за GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "Относно тази статия"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Относно тази Библиография"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "Относно Тази Книга"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "Относно Тази Глава"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "Относно Този Запис"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "Относно Този Речник"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "Относно Този Индекс"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "Относно Тази Част"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "Относно Този Предговор"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "Относно Тази Референция"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "Относно Тази Секция"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "Относно Тази Подредба"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Приложения"
+msgstr "Съединение"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Притурка"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Статия"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Публика"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Автор"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Автори"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Библиография"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Книга"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Внимание"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Глава"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Сътрудник"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Сътрудници"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "винетка/емблема"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Авторско право"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Авторски права"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Дата"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Секция"
+msgstr "Посвещение"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/_Редактирай"
+msgstr "Редактор"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Електронна поща"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Пример"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Фигура"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Речник"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Важно"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -582,11 +555,11 @@ msgstr "Индекс"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Бележка за законността"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Ниво"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
@@ -602,93 +575,91 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Бележка"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Произход"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Друг сътрудник"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Други Сътрудници"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Част"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Предговор"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Издател"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Издатели"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Референция"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Запис на Референция"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Секция на Референция"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Информация относно датата на издаване"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "История на редакциите"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "Виж"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "Виж Също"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
 msgstr "Индекс"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Таблица"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Съдържание"
+msgstr "Таблица на Съдържанието"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Подсказка"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "Заглавие"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Предупреждение"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Помощ с ГНОМ"
+msgstr "Помощ с GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
