--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-08  Guntupalli Karunakar  <karunakar@freedomink.org>
+
+        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.
+
 2004-03-31  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "af" to ALL_LINGUAS.
