--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-08  Guntupalli Karunakar  <karunakar@freedomink.org>
+
+        * gu.po: Added Gujurati translation by
+        Gujarati Team <magnet@magnet-i.com>.
+
 2004-04-04  Samúel Jón Gunnarsson  <sammi@techattack.nu>
 
 	* is.po: Updated Icelandic translation by
