--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-19  Mohammad DAMT  <mdamt@bisnisweb.com>
+
+	* id.po: Updated Indonesian translation
+
 2004-04-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Fix spellings.
