--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-19  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-io-channel.c:
+	- #include <stdio.h>, as per #134886
+
+2004-04-19  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-db-pager.c:
 	- Fix leak with gtk_tree_store_set, #140546  (Morten Welinder)
 
