--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-20  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2004-04-19  Mohammad DAMT  <mdamt@bisnisweb.com>
 
 	* id.po: Updated Indonesian translation
