--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-15  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* configure.in: Added Georgian (ka) to ALL_LINGUAS.
+
 2004-04-19  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
@@ -251,7 +255,7 @@
 	* stylesheets/db2html-xref.xsl:
 	- Fixed blatently wrong grabbing of text content for ulink.
 
-2004-02-05  Tomasz K³oczko <kloczek@pld.org.pl>
+2004-02-05  Tomasz KÅ‚oczko <kloczek@pld.org.pl>
 
 	* configure.in: Trivial cleanup: remove AC_SUBST(CFLAGS)
 	  and AC_SUBST(LDFLAGS). This variables are substed by default.
