--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-24  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* ka.po: Added Georgian file
+
 2004-04-20  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
