--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-24  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-04-24  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* ka.po: Added Georgian file
