--- a/po/hu.po
+++ b/po/hu.po
@@ -1,21 +1,25 @@
+# 
 # Hungarian translation of yelp.
 # Copyright (C) 2002-2004 Free Software Foundation, Inc.
 # Szabolcs Ban <shooby@gnome.hu>, 2002.
 # Emese Kovacs <emese@gnome.hu>, 2002.
 # Andras Timar <timar@gnome.hu>, 2002-2004.
 # Laszlo Dvornik <dvornikl@mailbox.hu>, 2004.
+# Gabor Kelemen <kg0021@stud.unideb.hu>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-23 04:21+0100\n"
-"PO-Revision-Date: 2004-03-25 17:56+0100\n"
-"Last-Translator: Laszlo Dvornik <dvornikl@mailbox.hu>\n"
-"Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
+"POT-Creation-Date: 2004-04-15 15:34+0200\n"
+"PO-Revision-Date: 2004-04-24 08:37+0200\n"
+"Last-Translator: Gabor Kelemen <kg0021@stud.unideb.hu>\n"
+"Language-Team: Hungarian <gnome@gnome.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.3.1\n"
+"Plural-Forms:  nplurals=1; plural=0;\n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -263,7 +267,7 @@ msgstr "A feldolgozandó dokumentum URI-ja"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Szünetek száma negatív."
 
 #: src/yelp-toc-pager.c:486
 #, c-format
@@ -412,51 +416,51 @@ msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "A cikk névjegye"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Az irodalomjegyzék névjegye"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "A könyv névjegye"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "A fejezet névjegye"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "A bejegyzés névjegye"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "A szójegyzék névjegye"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "Az index névjegye"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "A rész névjegye"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "Az előszó névjegye"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "A kézikönyv névjegye"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "A bekezdés névjegye"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "A sorozat névjegye"
 
 #: stylesheets/l10n.xml.in.h:17
 msgid "Affiliation"
@@ -464,15 +468,15 @@ msgstr "Kapcsolat"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Függelék"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Cikk"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Közönség"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
@@ -564,15 +568,15 @@ msgstr "Szint"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Üzenet közönsége"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Üzenet szintje"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Üzenet eredete"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
@@ -620,7 +624,7 @@ msgstr "Hivatkozás szakasz"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Kiadási információk"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
@@ -665,3 +669,4 @@ msgstr "A GNOME súgója"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Súgó"
+
