--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-03  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated.
+
 2004-04-27  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* eu.po: Added Basque file
