--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-24  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation
+	by  Vladimir "Kaladan" Petkov <vpetkov@i-space.org>
+
 2004-04-27  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* eu.po: Added Basque file
