--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-24  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* configure.in: Added Tajik (tg) to ALL_LINGUAS
+
 2004-05-07  Arvind Samptur  <arvind.samptur@wipro.com>
 
 	* src/yelp-main.c (main_save_session): Get the open_urls
