--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-24  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* tg.po: Added Tajik file
+
 2004-05-24  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation
